--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,11 @@ knitr::opts_chunk$set(
 
 The goal of NBA.package is to ...
 
+make functions for the following graphs:
+ - ecosystem threat status
+ - species threat status
+ - ecosystem protection level
+
 ## Installation
 
 You can install the development version of NBA.package from [GitHub](https://github.com/) with:
@@ -29,27 +34,9 @@ You can install the development version of NBA.package from [GitHub](https://git
 devtools::install_github("TashBes/NBA.package")
 ```
 
-## Example
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(NBA.package)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
 
 You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
 
-You can also embed plots, for example:
 
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
