--- a/README.Rmd
+++ b/README.Rmd
@@ -18,12 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of NBA.package is to ...
-
-make functions for the following graphs:
- - ecosystem threat status
- - species threat status
- - ecosystem protection level
+The goal of the NBA.package is to allow all graphs/ plots/ and maps created for the NBA to be created easily with targeted functions that enable ease of use and standardisation of results.
 
 ## Installation
 
