--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ The goal of the NBA.package is to allow all graphs/ plots/ and maps created for 
 
 You can install the development version of NBA.package from [GitHub](https://github.com/) with:
 
-``` r
+```{r}
 # install.packages("devtools")
 devtools::install_github("TashBes/NBA.package")
 ```
@@ -41,4 +41,16 @@ a list of all possible names to be used in the categories columns (NBA_categorie
 ## Issues
 
 If you find any issues with the package or functions, or if you have any suggestions for improvements to the package please go to the git repository and log an issue so it can be dealt with. 
+
+## How to cite this package
+
+You can cite this package like this "tables and figures were produced using the NBA.package R package (Besseling et al., 2024)". Here is the full bibliographic reference to include in your reference list (don't forget to update the 'last accessed' date):
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+
+citation("NBA.package")
+
+```
+
+
 
