--- a/README.Rmd
+++ b/README.Rmd
@@ -55,9 +55,8 @@ print(citation("NBA.package"))
 To cite package ‘NBA.package’ in publications use:
 
   Besseling N, Bull L, Monyeki M, Hendricks S, von Staden L (2024).
-  “Package for creation of the NBA.” _NA_, *1*(1), 1. doi:Zenodo. doi:
-  10.5281/zenodo.14899427
-  <https://doi.org/Zenodo.%20doi%3A%2010.5281/zenodo.14899427>.
+  “Package for creation of the NBA.” _NA_, *1*(1), 1.
+  doi:10.5281/zenodo.15310061 <https://doi.org/10.5281/zenodo.15310061>.
 
 A BibTeX entry for LaTeX users is
 
@@ -69,6 +68,5 @@ A BibTeX entry for LaTeX users is
     volume = {1},
     number = {1},
     pages = {1},
-    doi = {Zenodo. doi: 10.5281/zenodo.14899427},
+    doi = {https://doi.org/10.5281/zenodo.15310061},
   }
-
