--- a/vignettes/NBA.package.Rmd
+++ b/vignettes/NBA.package.Rmd
@@ -28,7 +28,7 @@ The table functions consist of NBA_tbl which makes a basic tabe for a quarto doc
 
 The map functions currently only consist of one function NBA_map, made using ggplot 2 and recreates the maps in the marine technical report 2018. 
 
-There are then three example datasets that can be accessed to test the functions and see the required format of the data to use the functions, which are: NBA_example_thr_data, NBA_example_pro_data, and NBA_example_RLI_data. There is also a list of the category names (NBA_categories) that are recognised by the function so that you can make sure you are using the correct naming convention. The functions **are** case sensitive so you must be careful when naming your categories.
+There are then four example datasets that can be accessed to test the functions and see the required format of the data to use the functions, which are: NBA_example_thr_data, NBA_example_pro_data, NBA_example_RLI_data, and NBA_example_map_data. There is also a list of the category names (NBA_categories) that are recognised by the function so that you can make sure you are using the correct naming convention. The functions **are** case sensitive so you must be careful when naming your categories.
 
 
 ## Graph functions
@@ -185,9 +185,12 @@ Please note this was modeled after the maps in the marine technical report 2018.
 
 ```{r}
 
-#map <- NBA_map(mem)
+map <- NBA_map(DF = NBA_example_map_data,
+               GEOM = geometry, 
+               CAP = "Figure 1. A map of the protection level of marine pelagic ecosystem types in South Africa", 
+               FILL = protection_level)
 
-
+map
 ```
 
 
