--- a/vignettes/NBA.package.Rmd
+++ b/vignettes/NBA.package.Rmd
@@ -20,18 +20,18 @@ library(NBA.package)
 
 This Vignette is to help users become familiar with the NBA package and get the most use out of its functions. 
 
-This package was create to help create the figures, plots, tables, and maps for the NBA. The functions are split into those used to make graphs, those used to makes tables, and those used to make maps. 
+This package was create to help create the figures, plots, tables, and maps for the NBA. The functions are split into those used to make plots, those used to makes tables, and those used to make maps. 
 
-The graph functions consist of one main plot funcion called NBA_plot that will create either a bar or donut plot and colour the graph by matching the category words (such as endangered, well protected, natural etc) with their set colours. There is then a complimentary function called NBA_comp which is used if you want to plot two plots together using gg_arrange as the underlying code, and NBA_theme that is a ggplot theme with all the NBA presets that can be applied to any ggplot object to ensure the graph maintains the NBA 'look'. 
+The plot functions consist of one main plot funcion called NBA_plot that will create either a bar or donut plot and colour the graph by matching the category words (such as endangered, well protected, natural etc) with their set colours. There is then a complimentary function called NBA_comp which is used if you want to plot two plots together using gg_arrange as the underlying code, and NBA_theme that is a ggplot theme with all the NBA presets that can be applied to any ggplot object to ensure the graph maintains the NBA 'look'. 
 
-The table functions consist of NBA_tbl which makes a basic tabe for a quarto document outputting to an html, NBA_colr_tbl which makes a basic table with a purple heading bar and colours the category names by their preset colours. There is also a complimentary NBA_gt_theme function that styles any gt table with the NBA's preset styling. 
+The table functions consist of NBA_tbl which makes a basic table for a quarto document outputting to an html, NBA_bl_colr which makes a basic table with a purple heading bar and colours the category names by their preset colours. There is also a complimentary NBA_tbl_theme function that styles any gt table with the NBA's preset styling. 
 
 The map functions currently only consist of one function NBA_map, made using ggplot 2 and recreates the maps in the marine technical report 2018. 
 
 There are then four example datasets that can be accessed to test the functions and see the required format of the data to use the functions, which are: NBA_example_thr_data, NBA_example_pro_data, NBA_example_RLI_data, and NBA_example_map_data. There is also a list of the category names (NBA_categories) that are recognised by the function so that you can make sure you are using the correct naming convention. The functions **are** case sensitive so you must be careful when naming your categories.
 
 
-## Graph functions
+## Plot functions
 
 Load the example data and use the variouse functions to create NBA plots. 
 
@@ -104,7 +104,7 @@ bar_plot_comb
 NBA_example_RLI_data <- NBA_example_RLI_data
 
 
-RLI_plot <- RLI_plot(NBA_example_RLI_data,
+RLI_plot <- NBA_plot_RLI(NBA_example_RLI_data,
                  Years, 
                  RLI, 
                  min, 
@@ -124,7 +124,7 @@ NBA_example_pro_data <- NBA_example_pro_data
 
 gg_plot <- ggplot(NBA_example_pro_data, aes(x = `OVERALL types`, y = `Well Protected`))+
   ggplot2::geom_point()+
-  NBA_theme()
+  NBA_plot_theme()
 
 gg_plot
 
@@ -155,7 +155,7 @@ library(tidyr)
 
 tbl <- NBA_example_pro_data %>% 
   pivot_longer(2:5, names_to = "protection_level") %>% 
-  NBA_colr_tbl(COL = protection_level)
+  NBA_tbl_colr(COL = protection_level)
 
 tbl
 ```
@@ -170,7 +170,7 @@ library(dplyr)
 
 gt_tbl <- NBA_example_thr_data %>% 
   gt() %>% 
-  NBA_gt_theme()
+  NBA_tbl_theme()
 
 gt_tbl
   
